[package]
name = "cronet-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cronet bindings for Rust"

[dependencies]
log = "0.4"
futures = "0.3"
http = "1.0"

[dev-dependencies]
futures-scopes = "0.3"
futures = {version = "0.3", features = ["thread-pool"]}
env_logger = "0.11"


[build-dependencies]
bindgen = "0.70"
